fix: spacing

--- a/src/components/agenda-date/agenda-date.scss
+++ b/src/components/agenda-date/agenda-date.scss
@@ -8,16 +8,9 @@
   background-color: $pink;
   padding: 15px;
   width: 100%;
-  transition: transform 0.3s ease-in-out;
 
   @media (min-width: $tabletMinWidth) {
     padding: 30px;
-  }
-
-  @media (min-width: $desktopMinWidth) {
-    &:hover {
-      transform: translateX(40px);
-    }
   }
 
   .date {
@@ -46,6 +39,7 @@
 
     @media (min-width: $tabletMinWidth) {
       font-size: 32px;
+      margin-bottom: 22px;
     }
   }
 
@@ -53,17 +47,4 @@
     display: flex;
     flex-direction: column;
   }
-
-  .bottom_line {
-    margin-top: 10px;
-    font-size: 16px;
-
-    @media (min-width: $tabletMinWidth) {
-      font-size: 20px;
-    }
-  }
-}
-
-.bg_orange {
-  background-color: $orange;
 }
